add explore categories function

--- a/src/pages/fonts.css
+++ b/src/pages/fonts.css
@@ -3,3 +3,20 @@
 .font-fancy {
   font-family: 'Playfair Display', serif;
 }
+
+
+/* <style>
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap');
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Poiret+One&display=swap');
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Poiret+One&family=Sofia&display=swap');
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Arizonia&family=Merienda:wght@300..900&family=Poiret+One&family=Sofia&display=swap');
+</style>
+</style>
+</style>
+</style>  */
